[package]
name = "pp-professional-registerer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
text_io = "0.1.10"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
rpassword = "6.0.1"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
